# tetris-4

./: .dockerignore  .gitignore  Dockerfile  README.md  TEMPLATE.md  fly.toml  nginx.conf  supervisord.conf
.github/scripts/: get-app-name.sh
.github/workflows/: README.md  backend-lint.yml  backend-tests.yml  ci.yml  cleanup-cron.yml  cleanup-pr.yml  deploy.yml  frontend-lint.yml  frontend-tests.yml
.openhands/microagents/: repo.md
backend/: .flake8  README.md  app.py  pyproject.toml
backend/tests/: test_app.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  App.test.jsx
frontend/src/components/: Footer.css  Footer.jsx  Footer.test.jsx  Header.css  Header.jsx  Header.test.jsx
frontend/src/context/: ThemeContext.jsx  ThemeContext.test.jsx
frontend/src/pages/: About.css  About.jsx  Contact.css  Contact.jsx  Home.css  Home.jsx  Home.test.jsx
